# era-memory

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-internal.txt
.github/workflows/: ci.yml  release.yml
docs/: HANDOVER-era-labs-tools.md  PROGRESS.md  era-memory-light-spec.md
docs/adr/: 0001-dimension-is-a-per-deployment-contract.md
src/era_memory/: __init__.py  __main__.py  app.py  config.py  embedders.py  errors.py  memory.py  models.py  wiring.py
src/era_memory/adapters/: __init__.py  auth.py
src/era_memory/adapters/fastembed/: __init__.py
src/era_memory/adapters/memory/: __init__.py
src/era_memory/adapters/openai/: __init__.py
src/era_memory/adapters/postgres/: __init__.py
src/era_memory/adapters/sqlite/: __init__.py
src/era_memory/core/: orchestration.py  pipeline.py  search.py
src/era_memory/core/logic/: dedup.py  entropy.py  envelope.py  matryoshka.py  rrf.py
src/era_memory/ports/: __init__.py  auth.py  blob_store.py  embedder.py  extractor.py  kms.py  queue.py  record_store.py  telemetry.py  vector_store.py
tests/: conftest.py  test_auth.py  test_core_logic.py  test_e2e_tier0.py  test_embedder_resolution.py  test_envelope.py  test_http_api.py  test_import_isolation.py  test_openai_embedder.py  test_orchestration.py  test_postgres_tier1.py  test_sqlite_tier0.py
tests/conformance/: test_embedder.py  test_kms.py  test_record_store.py  test_vector_store.py
