[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "era-memory"
version = "0.1.1"
description = "Portable, tier-selected memory system (record + vector + hybrid search) for agents and apps. Ports & adapters; runs from a laptop SQLite file up to a full Milvus/vLLM cluster."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Era Laboratories" }]
keywords = ["memory", "vector-search", "rag", "agents", "embeddings", "hybrid-search"]

# Base install has ZERO third-party deps (non-goal: no mandatory cloud/GPU/private registry).
# Each backend is an optional extra. This is the load-bearing packaging discipline.
dependencies = []

[project.optional-dependencies]
# --- Tier 0 (laptop / offline) ---
sqlite = ["sqlite-vec>=0.1.6"]
localembed = ["fastembed>=0.4.0"]
encryption = ["cryptography>=42.0"]

# --- Tier 1 (team / single VM / Cloud SQL) ---
postgres = ["asyncpg>=0.29", "pgvector>=0.3.0"]
openai = ["httpx>=0.27"]
redis = ["redis[hiredis]>=5.0"]

# --- Tier 2 (enterprise / era-core parity) ---
milvus = ["pymilvus>=2.6"]
vllm = ["httpx>=0.27"]
gcp = ["google-cloud-kms>=3.0"]
# NOTE: the private Era observability stack (era-telemetry / era-version-schema) used to live
# here as an [era] extra, but PyPI forbids direct git-URL dependencies in published metadata.
# Those pins now live in requirements-internal.txt for Era-internal installs; the public
# package never references them. The runtime imports neither (telemetry defaults to a no-op).

# --- HTTP service surface (optional; the library is usable in-process without it) ---
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.6", "orjson>=3.9"]

# --- Convenience bundles ---
tier0 = ["era-memory[sqlite,localembed]"]
tier1 = ["era-memory[postgres,openai,redis,server]"]

dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
era-memory = "era_memory.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/era_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # The dev-embedder notice is intentional for real users; keep it out of test noise.
    # (pytest.warns still asserts it where tests check for it explicitly.)
    "ignore:era-memory is using the non-semantic dev embedder:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
